blueprint/deployments/ebu-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ebu-business-api
  name: ebu-business-api
spec:
  selector:
    matchLabels:
      app: ebu-business-api
  replicas: 1
  template:
    metadata:
      labels:
        app: ebu-business-api
    spec:
      serviceAccountName: bigdata
      containers:
        - name: ebu-business-api
          image: registry.tools.blueprint.lab/bigdata/ebu-business-api:1.0.4
          ports:
            - containerPort: 8080
          command:
            - sh
            - -c
            - java -jar /ebu-api-1.0.3.jar --spring.config.location=/tmp/application.properties
          imagePullPolicy: Always
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2"
          volumeMounts:
            - mountPath: /tmp/application.properties
              name: ebu-config
              subPath: application.yaml
      volumes:
        - name: ebu-config
          configMap:
            name: ebu-config
            items:
              - key: application.yaml
                path: application.yaml
      imagePullSecrets:
        - name: regcred

          
---
apiVersion: v1
kind: Service
metadata:
  name: ebu-business-api
spec:
  type: ClusterIP
  ports:
    - name: send-port
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ebu-business-api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

  labels:
    name: api-ingress
  name: api-ingress
spec:
  rules:
    - host: api.bigdata.blueprint.lab
      http:
        paths:
          - backend:
              service:
                name: ebu-business-api
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
